--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,8 +3,13 @@ version: '3.0'
 services:
   web:
     # TODO: build context, ports and redis dependency
+    build: .
+    ports:
+      - "5000:5000"
     volumes:
       - .:/code
+    depends_on:
+      - redis
     environment:
       # Makes flask to reload code on change
       FLASK_ENV: development
@@ -12,5 +17,7 @@ services:
       REDIS_PORT: 6379
   redis:
     image: redis:6.0-rc4-alpine
+    volumes:
+      - ./redis_data:/data
     # TODO: missing persistence for redis. You need to persist /data directory.
 
